--- a/Data Visualisation 2/index.html
+++ b/Data Visualisation 2/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- end pure grid group -->
 
-    <div class="map" style="margin-left: 40px;" >
+    <div class="map" style="margin-left: 0px;" >
       <div id="vis1" class="map-container"   ></div>
     </div>
 
@@ -78,7 +78,7 @@
         <div id="vis2" class="vis-container"></div>
       </div>
       <div class="pure-u-1-3">
-        <div class="a" style="padding-right: 50px;">
+        <div class="a" style="padding-right: 40px; margin-left: 30px;">
           
           <p>By April 2020, about half of the world's population was under some form of lockdown,
              with more than 3.9 billion people in more than 90 countries or territories having been
