--- a/Data Visualisation 2/index.html
+++ b/Data Visualisation 2/index.html
@@ -97,6 +97,7 @@
 
       <!-- Long Bar -->
   <div class="critical"  >
+    <h1 style="font-size: small;"> Percentage of Deaths over Cases per country</h1>
     <div id="vis6" class="vis-container"   ></div>
   </div>
 
