--- a/Data Visualisation 2/index.html
+++ b/Data Visualisation 2/index.html
@@ -37,6 +37,21 @@
 
   <div class="space" style="padding: 20px;"> </div>
 
+  <!-- Description -->
+  <div class="page" style="padding-bottom: 20px;">
+    <div class="map-description">
+      <h2 style="margin-bottom: 20px;">First year of Covid</h2>
+      <p style="margin-bottom: 20px;">COVID-19, caused by the severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2), 
+        was declared a pandemic by the World Health Organization (WHO) on the 11th of March 2020,
+         leading to some form of lockdown across almost all countries of the world.  </p>
+      <p>In 2020 COVID-19 affected almost all countries and more than 50 million people around the world.
+         It has governments operating in a context of radical uncertainty, and faced with difficult trade-offs
+          given the health, economic and social challenges it raises.</p>
+    </div>
+  </div>
+
+  <div class="space" style="padding: 20px;"> </div>
+
     <!-- Map -->
   <div class="map"  >
     <div id="vis1" class="map-container"   ></div>
@@ -47,31 +62,42 @@
     <!-- Bubble -->
   <div class="page">
     <div class="map-description">
-      <h2 style="margin-bottom: 20px;">First year of Covid</h2>
-      <p style="margin-bottom: 20px;">COVID-19, caused by the severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2), 
-        was declared a pandemic by the World Health Organization (WHO) on the 11th of March 2020,
-         leading to some form of lockdown across almost all countries of the world.  </p>
-      <p>In 2020 COVID-19 affected almost all countries and more than 50 million people around the world.
-         It has governments operating in a context of radical uncertainty, and faced with difficult trade-offs
-          given the health, economic and social challenges it raises.</p>
+      <p style="margin-bottom: 20px;">By November 2020, it is clear that the impact of the COVID-19 crisis differs markedly not only across countries, but also 
+        across regions and municipalities within countries, both in terms of declared cases and related deaths  </p>
+      <p>
+        The countries that fared the best were the ones that quickly implemented widespread testing, 
+        contact tracing, isolation of infected people and quarantining of close contacts, experts said. </p>
     </div>
-
     <div id="vis5" class="bubble" style="margin-bottom: 50px;"></div>
   </div> 
     
   <div class="space" style="padding: 20px;"> </div>
 
     <!-- Bars -->
-  <div class = "page">
-    <div class="pure-g" >
-      <div class="pure-u-1-2">
-        <div id="vis4" class="vis-container" style="margin-left: 50px "></div>
+    <div class = "page">
+      <div class="pure-g" >
+        <div class="pure-u-1-2" >
+          <p style="padding-left: 50px; padding-right: 50px; padding-bottom: 10px;margin-top: 10px;">The U.S. of course has a larger population than most countries, with almost 330 million residents. But even on a per-person basis,
+             it ranks near the top in both cases and deaths.  </p>
+          <p style="padding-left: 50px; padding-right: 50px; padding-bottom: 30px;">President Trump said the fact that the United States has the most coronavirus cases in the world 
+            is a “badge of honor” because it shows how much testing the country is doing.  </p>
+        </div>
+        <div class="pure-u-1-2" >
+          <p style="padding-left: 50px; padding-right: 50px; padding-bottom: 10px; ">While there are many factors at play when comparing how countries have fared in the coronavirus pandemic,
+             public health experts say Trump’s explanation left out a key factor:  </p>
+          <p style="padding-left: 50px; padding-right: 50px; padding-bottom: 30px;">The U.S. has so many cases because it was initially slow to 
+            respond to the outbreak and ramp up testing and other containment tools.                                                                           </p>
+        </div>
       </div>
-      <div class="pure-u-1-2" >
-        <div id="vis3" class="vis-container" style="margin-left: 30px"></div>
+      <div class="pure-g" >
+        <div class="pure-u-1-2">
+          <div id="vis4" class="vis-container" style="margin-left: 50px "></div>
+        </div>
+        <div class="pure-u-1-2" >
+          <div id="vis3" class="vis-container" style="margin-left: 30px"></div>
+        </div>
       </div>
     </div>
-  </div>
 
   <div class="space" style="padding: 20px;"> </div>
 
